Increase min-width of hall of fame item to prevent premature wrap

--- a/src/components/Statistics/index.less
+++ b/src/components/Statistics/index.less
@@ -7,7 +7,7 @@
 
 .ant-statistic {
   width: 100%;
-  min-width: 250px;
+  min-width: 275px;
   max-width: 330px;
 }
 
